--- a/index.html
+++ b/index.html
@@ -10,29 +10,51 @@ Released under the MIT license: http://jsbin.mit-license.org
 <meta name="robots" content="noindex">
 <html>
 <head>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.0.8/rx.all.js"></script>
-  <meta charset="utf-8">
-  <title>RxJs: Throttling</title>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.0.8/rx.all.js"></script>-->
+    <!--<script src="./node_modules/systemjs"></script>-->
+    <meta charset="utf-8">
+    <title>RxJs: Throttling</title>
+    <script src="https://npmcdn.com/systemjs@0.19.36/dist/system.js"></script>
 </head>
 <body>
-  <button id="clickMe">Click Me</button>
+<button id="clickMe">Click Me</button>
 
-  <h4>values sent</h4>
-  <div id="results"></div>
+<h4>values sent</h4>
+<div id="results"></div>
+<script type="text/javascript">
+    System.config({
+        packages: {
+            build: {
+                "defaultExtension": "js",
+                "main": "index"
+            },
+            rxjs:{
+                "defaultExtension":"js"
+            }
+        },
+        map:{
+            rxjs:"node_modules/rxjs/bundles/Rx.umd.js"
+        }
+    });
+
+    System.import('build');
+
+
+</script>
 <script id="jsbin-javascript" type="text/ecmascript-6">
-var btn = document.querySelector('#clickMe');
-var clicks = Rx.Observable.fromEvent(btn, 'click');
-
-clicks.scan((s) => s + 1, 0)
-  .buffer(clicks.throttle(1000))
-  .forEach(x => sendValues(x));
-
-function sendValues(arr) {
-  var pre = document.createElement('pre');
-  pre.innerHTML = JSON.stringify(arr);
-  document.querySelector('#results')
-    .appendChild(pre);
-}
+    //    var btn = document.querySelector('#clickMe');
+    //    var clicks = Rx.Observable.fromEvent(btn, 'click');
+    //
+    //    clicks.scan((s) => s + 1, 0)
+    //        .buffer(clicks.throttle(1000))
+    //        .forEach(x => sendValues(x));
+    //
+    //    function sendValues(arr) {
+    //        var pre = document.createElement('pre');
+    //        pre.innerHTML = JSON.stringify(arr);
+    //        document.querySelector('#results')
+    //            .appendChild(pre);
+    //    }
 </script>
 </body>
 </html>
